# hyprPanopticon

./: AGENT.md  Cargo.toml  README.ja.md  README.md  flake.nix
.github/workflows/: rust.yml
site/: index.html  index.ja.html
src/: config.rs  layout.rs  main.rs  model.rs
src/capture/: buffer.rs  engine.rs  mod.rs
src/ipc/: events.rs  mod.rs  snapshot.rs
src/ui/: mod.rs  overlay.rs  preview.rs  ring.rs
